[package]
name = "plance"
version = "0.1.0"
authors = ["NineSilver <60185955+NineSilver@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5"
